src/test/deca/syntax/invalid/test16_decl.deca
// Description:
//    Programme testant une declaration invalide.
//	  Etape(s) : A et B
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//
// Resultats:
//	  test_lex : pas d'erreur
//    test_synt : erreur ligne 16 : missing IDENT at ';'
//
// Historique:
//    cree le 10/01/2021

{
	int x,y,z,;
}
